--- a/index.html
+++ b/index.html
@@ -23,7 +23,10 @@
     <!-- Container for the entire page -->
     <div class="w-screen overflow-x-hidden">
       <!-- Navigation bar -->
-      <nav id="navbar-container" class="fixed left-0 top-0 z-50 h-fit w-full">
+      <nav
+        id="navbar-container"
+        class="fixed left-0 top-0 z-[999] h-fit w-full"
+      >
         <!-- Container for navigation content, including logo and menu items -->
         <div
           class="container absolute left-0 right-0 mx-auto flex items-center justify-between py-6 lg:items-center lg:py-8"
@@ -33,13 +36,13 @@
           <a href="#" class="z-30">
             <img
               src="./assets/images/logo.png"
-              class="h-7 lg:h-14"
+              class="h-11 lg:h-14"
               alt="logo"
             />
           </a>
 
           <!-- Hamburger menu icon for mobile view -->
-          <label for="nav-check" class="z-30 text-xl lg:hidden">
+          <label for="nav-check" class="z-30 text-2xl lg:hidden">
             <i class="fas fa-bars"></i>
           </label>
           <!-- Hidden checkbox for the mobile menu toggle -->
@@ -47,43 +50,53 @@
 
           <!-- Navigation menu items -->
           <ul
-            class="absolute left-0 top-0 z-10 flex h-0 w-full flex-col items-end gap-11 overflow-hidden bg-white px-4 transition-all duration-500 lg:static lg:h-auto lg:w-auto lg:flex-row lg:bg-transparent lg:pb-0 lg:pt-0 lg:shadow-none"
+            class="absolute left-0 top-0 z-10 flex h-0 w-full flex-col items-end divide-y divide-slate-400 overflow-hidden bg-white transition-all duration-500 lg:static lg:h-auto lg:w-auto lg:flex-row lg:gap-11 lg:divide-y-0 lg:bg-transparent lg:pb-0 lg:pt-0 lg:shadow-none"
             id="navbar"
           >
             <!-- About Us menu item -->
-            <li class="group">
+            <li
+              class="group w-full px-4 py-6 hover:bg-slate-300 lg:w-fit lg:px-0 lg:py-0 lg:hover:bg-transparent"
+            >
               <a class="transition hover:text-primary" href="#">About Us</a>
               <!-- Underline effect on hover -->
               <div
-                class="ml-auto h-px w-0 bg-primary transition-[width] group-hover:ml-0 group-hover:w-full"
+                class="ml-auto h-px w-0 bg-primary transition-[width] group-hover:ml-0 lg:group-hover:w-full"
               ></div>
             </li>
             <!-- Features menu item -->
-            <li class="group">
+            <li
+              class="group w-full px-4 py-6 hover:bg-slate-300 lg:w-fit lg:px-0 lg:py-0 lg:hover:bg-transparent"
+            >
               <a class="transition hover:text-primary" href="#">Features</a>
               <div
-                class="ml-auto h-px w-0 bg-primary transition-[width] group-hover:ml-0 group-hover:w-full"
+                class="ml-auto h-px w-0 bg-primary transition-[width] group-hover:ml-0 lg:group-hover:w-full"
               ></div>
             </li>
             <!-- Card menu item -->
-            <li class="group">
+            <li
+              class="group w-full px-4 py-6 hover:bg-slate-300 lg:w-fit lg:px-0 lg:py-0 lg:hover:bg-transparent"
+            >
               <a class="transition hover:text-primary" href="#">Card</a>
               <div
-                class="ml-auto h-px w-0 bg-primary transition-[width] group-hover:ml-0 group-hover:w-full"
+                class="ml-auto h-px w-0 bg-primary transition-[width] group-hover:ml-0 lg:group-hover:w-full"
               ></div>
             </li>
             <!-- Testimonial menu item -->
-            <li class="group">
+            <li
+              class="group w-full px-4 py-6 hover:bg-slate-300 lg:w-fit lg:px-0 lg:py-0 lg:hover:bg-transparent"
+            >
               <a class="transition hover:text-primary" href="#">Testimonial</a>
               <div
-                class="ml-auto h-px w-0 bg-primary transition-[width] group-hover:ml-0 group-hover:w-full"
+                class="ml-auto h-px w-0 bg-primary transition-[width] group-hover:ml-0 lg:group-hover:w-full"
               ></div>
             </li>
             <!-- Prizing menu item -->
-            <li class="group">
-              <a class="transition hover:text-primary" href="#">Prizing</a>
+            <li
+              class="group w-full px-4 py-6 hover:bg-slate-300 lg:w-fit lg:px-0 lg:py-0 lg:hover:bg-transparent"
+            >
+              <a class="transition hover:text-primary" href="#">Pricing</a>
               <div
-                class="ml-auto h-px w-0 bg-primary transition-[width] group-hover:ml-0 group-hover:w-full"
+                class="ml-auto h-px w-0 bg-primary transition-[width] group-hover:ml-0 lg:group-hover:w-full"
               ></div>
             </li>
           </ul>
@@ -99,7 +112,7 @@
       >
         <!-- Container for hero content -->
         <div class="container relative">
-          <div class="w-full text-center lg:w-1/2 lg:text-left">
+          <div class="w-full text-left lg:w-1/2">
             <!-- Hero title with AOS animation -->
             <h1 data-aos="fade-right" data-aos-duration="1000">
               Revolutionize Your Finances
@@ -127,7 +140,7 @@
             <div class="mt-14 flex flex-col gap-6 md:flex-row lg:gap-12">
               <!-- Left-side statistic -->
               <aside class="w-full md:w-7/12">
-                <div class="flex justify-center lg:justify-start">
+                <div class="flex">
                   <!-- User avatars with AOS animations -->
                   <div class="relative flex w-32 items-center">
                     <img
@@ -177,12 +190,12 @@
 
               <!-- Right-side statistic -->
               <aside class="w-full md:w-5/12">
-                <div class="flex justify-center gap-4 lg:justify-start">
+                <div class="flex justify-start gap-4 lg:justify-start">
                   <!-- Statistic value with AOS animation -->
                   <h3
-                    data-aos="fade-left"
+                    data-aos="fade-right"
                     data-aos-duration="1000"
-                    data-aos-delay="100"
+                    data-aos-delay="200"
                   >
                     122K
                   </h3>
@@ -190,9 +203,9 @@
                   <!-- Percentage change indicator with AOS animation -->
                   <div
                     class="flex items-center gap-1 rounded-full bg-primary px-4 py-2 text-white"
-                    data-aos="fade-left"
+                    data-aos="fade-right"
                     data-aos-duration="1000"
-                    data-aos-delay="200"
+                    data-aos-delay="100"
                   >
                     <p class="text-xs">24%</p>
                     <i class="fas fa-arrow-circle-up"></i>
@@ -202,7 +215,7 @@
                 <!-- Statistic description with AOS animation -->
                 <p
                   class="mt-4 text-gray"
-                  data-aos="fade-left"
+                  data-aos="fade-right"
                   data-aos-duration="1000"
                   data-aos-delay="300"
                 >
@@ -263,7 +276,11 @@
               <!-- Feature container with rounded corners, transparent border, background image, 
                    padding, and transition effect for border color on hover. -->
 
-              <div class="mb-8 aspect-square w-16 bg-primary-light"></div>
+              <div
+                class="mb-8 flex aspect-square w-16 items-center justify-center bg-primary-light"
+              >
+                <i class="fa fa-wallet text-4xl"></i>
+              </div>
               <!-- Placeholder for feature icon or image, with margin, fixed width, and background color -->
 
               <h3 class="mb-2">Smart Budgeting</h3>
@@ -291,7 +308,11 @@
             >
               <!-- Similar structure as Feature 1 -->
 
-              <div class="mb-8 aspect-square w-16 bg-primary-light"></div>
+              <div
+                class="mb-8 flex aspect-square w-16 items-center justify-center bg-primary-light"
+              >
+                <i class="fa fa-handshake text-4xl"></i>
+              </div>
               <!-- Placeholder for feature icon or image -->
 
               <h3 class="mb-2">Global Acceptance</h3>
@@ -319,7 +340,11 @@
             >
               <!-- Similar structure as Feature 1 and Feature 2 -->
 
-              <div class="mb-8 aspect-square w-16 bg-primary-light"></div>
+              <div
+                class="mb-8 flex aspect-square w-16 items-center justify-center bg-primary-light"
+              >
+                <i class="fa fa-shield text-4xl"></i>
+              </div>
               <!-- Placeholder for feature icon or image -->
 
               <h3 class="mb-2">Digital-First Security</h3>
@@ -396,7 +421,7 @@
                 <!-- List item with a flexbox layout to align items horizontally, with a gap between them.
                      Each list item animates by fading in from the left. -->
                 <div
-                  class="flex aspect-square h-6 w-6 items-center justify-center rounded-full bg-primary-light text-white"
+                  class="flex !aspect-square !w-10 items-center justify-center rounded-full bg-primary-light text-white"
                 >
                   <i class="fas fa-check text-xs"></i>
                 </div>
@@ -411,7 +436,7 @@
                 data-aos-duration="1000"
               >
                 <div
-                  class="flex aspect-square h-6 w-6 items-center justify-center rounded-full bg-primary-light text-white"
+                  class="flex !aspect-square !w-10 items-center justify-center rounded-full bg-primary-light text-white"
                 >
                   <i class="fas fa-check text-xs"></i>
                 </div>
@@ -426,7 +451,7 @@
                 data-aos-duration="1000"
               >
                 <div
-                  class="flex aspect-square h-6 w-6 items-center justify-center rounded-full bg-primary-light text-white"
+                  class="flex !aspect-square !w-10 items-center justify-center rounded-full bg-primary-light text-white"
                 >
                   <i class="fas fa-check text-xs"></i>
                 </div>
@@ -440,7 +465,7 @@
                 data-aos-duration="1000"
               >
                 <div
-                  class="flex aspect-square h-6 w-6 items-center justify-center rounded-full bg-primary-light text-white"
+                  class="flex !aspect-square !w-10 items-center justify-center rounded-full bg-primary-light text-white"
                 >
                   <i class="fas fa-check text-xs"></i>
                 </div>
@@ -455,7 +480,7 @@
                 data-aos-duration="1000"
               >
                 <div
-                  class="flex aspect-square h-6 w-6 items-center justify-center rounded-full bg-primary-light text-white"
+                  class="flex !aspect-square !w-10 items-center justify-center rounded-full bg-primary-light text-white"
                 >
                   <i class="fas fa-check text-xs"></i>
                 </div>
@@ -741,7 +766,7 @@
                 <!-- If we need pagination -->
                 <div class="swiper-pagination"></div>
               </div>
-              <div class="absolute bottom-0 right-0 z-50 flex gap-3">
+              <div class="absolute bottom-0 right-0 z-50 flex gap-6 lg:gap-3">
                 <!-- Container for custom navigation buttons, positioned absolutely at the bottom-right corner. -->
 
                 <button class="slide-left px-6 py-4 lg:px-4 lg:py-2">
